@@ -5,6 +5,15 @@
 Release Notes
 =============
 
+dev
+--------------------------------------------------------------------
+
+* I3MCTree converter is back. It's still useless, but apparently it found its
+  way into PINGU processing.
+* Allow converters to accept subclasses of their handled types. This makes it
+  possible to book I3LinearizedMCTree, a thing that was blocked for no good
+  reason.
+
 March15, 2015, Alex Olivas  (olivas@icecube.umd.edu)
 --------------------------------------------------------------------
 
